--- a/src/main/webapp/postLook.html
+++ b/src/main/webapp/postLook.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8" />
-  <title>Glassが見た車番を登録</title>
+  <title>スタッフが見た車番を登録</title>
   <style>
     li > label {
       display: inline-block;
